--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
+<app-header></app-header>
 <div class="container text-center">
   <div class="row">
     <div class="col-md-12">
       <h2>This is working</h2>
+      <app-recipes></app-recipes>
+      <hr>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
